--- a/package.json
+++ b/package.json
@@ -5,21 +5,49 @@
   "scripts": {
     "dev": "next dev -p 4000",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 8804",
     "lint": "next lint"
   },
   "dependencies": {
+    "@babel/standalone": "^7.20.4",
+    "@codemirror/commands": "^6.1.2",
+    "@codemirror/lang-html": "^6.2.0",
+    "@codemirror/lang-javascript": "^6.1.1",
+    "@codemirror/lang-json": "^6.0.1",
+    "@codemirror/lang-markdown": "^6.0.5",
+    "@codemirror/lang-xml": "^6.0.1",
+    "@codemirror/language": "^6.3.1",
+    "@codemirror/legacy-modes": "^6.3.1",
+    "@codemirror/state": "^6.1.4",
+    "@codemirror/view": "^6.5.1",
+    "@svgr/core": "6.5.1",
+    "@svgr/plugin-jsx": "6.5.1",
+    "@types/markdown-it": "^12.2.3",
     "@types/node": "18.11.9",
+    "@types/prettier": "^2.7.1",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
+    "ahooks": "^3.7.2",
+    "antd": "^4.24.2",
+    "codemirror": "^6.0.1",
+    "diff": "^5.1.0",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.3",
-    "next": "13.0.3",
+    "highlight.js": "^11.6.0",
+    "html2canvas": "^1.4.1",
+    "legacy-modes": "link:\"@codemirror/legacy-modes",
+    "markdown-it": "^13.0.1",
+    "next": "^13.0.3",
+    "prettier": "^2.8.0",
+    "quicktype": "^15.1.0",
+    "quicktype-core": "^6.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.8.4"
   },
   "devDependencies": {
+    "@builder.io/partytown": "^0.7.2",
+    "@tailwindcss/typography": "^0.5.8",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.19",
     "tailwindcss": "^3.2.4"
